@@ -23,6 +23,7 @@
 * Added save_options() method which is called to process options.
 * Fixed Last.fm extension.
 * Added deviantART extension.
+* Added BackType feed from yoast.
 
 0.93b
 
